[metadata]
name = grideye-driver
version = attr: grideye.__version__
description = Python driver for the Panasonic AMG88 Grid-EYE infrared array sensor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rogiervandergeer/grideye-driver
author = Rogier van der Geer
author_email = rogier@vander-geer.nl
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Hardware :: Hardware Drivers
    Typing :: Typed

[options]
zip_safe = True
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    smbus2 >= 0.3.0

[options.package_data]
* = py.typed

[options.packages.find]
where=src
